Improve SecurityConfig CORS and authorization rules